deploy: 39b5f0cd5999e31dfb80b32d8049f6f7a26fdce7

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <meta name="theme-color" content="#ffffff">
 
 
-  <title>Biniyam Demissew</title>
+  <title>flutter_web_portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
